<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    tools:context=".LoginApp.AddressActivity">

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/plotno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plotno" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Area" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/start_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button"
            android:text="@string/Previous" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button"
            android:text="@string/submit" />


    </LinearLayout>


</LinearLayout>