<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/start_margin"
    android:orientation="vertical"
    tools:context=".LoginApp.EmpDetailActivity">

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/employee_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee"
            android:inputType="text|number" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/employee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_n"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/start_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_prev_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button"
            android:text="@string/Previous" />

        <Button
            android:id="@+id/button_next_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button"
            android:layout_marginEnd="@dimen/margin_button"
            android:text="@string/next" />


    </LinearLayout>

</LinearLayout>