<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginApp.UpdateActivity">

    <ImageView
        android:id="@+id/image_update"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/shape"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/employee_id_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee"
                android:inputType="text|number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/employee_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_n"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>